--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -445,6 +445,9 @@
     <ClInclude Include="..\Public\EffectDropRockDust.h">
       <Filter>05.Effect\Ursa\Rock\RockDust</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\EffectUrsaShoulder.h">
+      <Filter>05.Effect\Ursa\Shoulder</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -875,6 +878,9 @@
     </ClCompile>
     <ClCompile Include="..\Private\EffectDropRockDust.cpp">
       <Filter>05.Effect\Ursa\Rock\RockDust</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\EffectUrsaShoulder.cpp">
+      <Filter>05.Effect\Ursa\Shoulder</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1323,6 +1329,9 @@
     </Filter>
     <Filter Include="04.UI\StatusHud">
       <UniqueIdentifier>{367a2b80-1de1-4462-9306-ee1839b56db2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\Ursa\Shoulder">
+      <UniqueIdentifier>{f22d41cb-ba1b-47b9-a666-902a8998e3c9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
