--- a/Assets/Scenes/BossSY.yaml
+++ b/Assets/Scenes/BossSY.yaml
@@ -53,7 +53,7 @@ GameObjects:
     Com_Transform:
       Translation: [0, 4.4000001, 4.19999981]
       Rotation: [-83.1999741, -0, 0.0999926403]
-      Scale: [0.999933839, 0.999992609, 0.999995708]
+      Scale: [0.999933779, 0.999992609, 0.999995708]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Tile\
       MeshFileName: Tile16.fbx
@@ -111,9 +111,9 @@ GameObjects:
     PassIndex: 1
     BillBord: false
     Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [0.00118590461, -89.1113663, -0.000926627603]
-      Scale: [0.999947608, 1, 0.999947608]
+      Translation: [-0.0226405263, -0.00234144926, -0.23443757]
+      Rotation: [118.51033, 63.3821182, 116.514008]
+      Scale: [1.00000036, 0.999999344, 0.999999404]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: Effect_HalfCircleY.fbx
@@ -157,9 +157,9 @@ GameObjects:
       Scale: [1, 1, 1]
     Com_OBB:
       Center: [0, 0, 0]
-      Size: [0.200000003, 0.100000001, 0.200000003]
+      Size: [0.300000012, 0.400000006, 0.400000006]
       IsAttach: true
-      BoneName: Bip01-LUpArmTwist
+      BoneName: Bip01-RUpArmTwist
       Offset: [0, 0, 0]
       CollisionType: 8
     Com_Model:
