--- a/Assets/Scenes/ReinforceUI.yaml
+++ b/Assets/Scenes/ReinforceUI.yaml
@@ -18,6 +18,15 @@ GameObjects:
       TextureNoisePath: ""
       TextureAnyPath: ""
       Color: [0, 0, 0, 1]
+    Children:
+      - 10480240937084011576
+      - 18189282622033961211
+      - 7587394193738736047
+      - 4841210787061409446
+      - 12974663652876638929
+      - 14269806176148426749
+      - 15846141100906453035
+      - 5277232172662643811
   - Name: ReinforceSlot
     UUID: 10480240937084011576
     Active: true
@@ -42,7 +51,7 @@ GameObjects:
     Layer: Default
     Instancing: false
     Type: UI
-    SortingOrder: 7
+    SortingOrder: 8
     PassIndex: 1
     Hovering: false
     Com_Transform:
@@ -78,7 +87,7 @@ GameObjects:
     Layer: Default
     Instancing: false
     Type: UI
-    SortingOrder: 7
+    SortingOrder: 8
     PassIndex: 1
     Hovering: false
     Com_Transform:
@@ -97,14 +106,14 @@ GameObjects:
     Instancing: false
     Type: UI
     SortingOrder: 6
-    PassIndex: 1
-    Hovering: false
+    PassIndex: 6
+    Hovering: true
     Com_Transform:
       Position: [1026, 570.481934]
       Size: [128, 64]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Reinforce\Onhead_TextBubble.dds
-      TextureMaskPath: ""
+      TextureMaskPath: ..\..\Assets\UITexture\Alret\Alert_Bg_Left_Blur.tga
       TextureNoisePath: ""
       TextureAnyPath: ""
       Color: [0, 0, 0, 1]
@@ -121,10 +130,46 @@ GameObjects:
       Position: [972.535583, 289.421692]
       Size: [463.896973, 130.322815]
     Com_Text:
-      Text: df
+      Text: ""
       Color: [1, 1, 1, 1]
       Scale: [1, 1]
       LayerDepth: 0
       IsCenter: false
       ShaderCut: false
-      IsKorean: true
+      IsKorean: false
+  - Name: CloseButton
+    UUID: 15846141100906453035
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: UI
+    SortingOrder: 7
+    PassIndex: 1
+    Hovering: true
+    Com_Transform:
+      Position: [1253.92773, 50]
+      Size: [20, 20]
+    Com_VIBuffer:
+      TexturePath: ..\..\Assets\UITexture\Hud\Alert_Bg_Continuty_2.tga
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureAnyPath: ""
+      Color: [0, 0, 0, 1]
+  - Name: ReinforceEffect
+    UUID: 5277232172662643811
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: UI
+    SortingOrder: 7
+    PassIndex: 4
+    Hovering: false
+    Com_Transform:
+      Position: [1026, 128]
+      Size: [100, 100]
+    Com_VIBuffer:
+      TexturePath: ..\..\Assets\UITexture\Reinforce\Qte_Fx_CircleFlare_0.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureAnyPath: ""
+      Color: [0, 0, 0, 1]
