--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -287,6 +287,7 @@
     <ClInclude Include="..\Public\PortalUI.h" />
     <ClInclude Include="..\public\QuestHud.h" />
     <ClInclude Include="..\public\QuickSlot.h" />
+    <ClInclude Include="..\public\ReinforceHud.h" />
     <ClInclude Include="..\Public\Scene_JUN.h" />
     <ClInclude Include="..\public\Scene_Kim.h" />
     <ClInclude Include="..\Public\Scene_LEE.h" />
@@ -453,6 +454,7 @@
     <ClCompile Include="..\Private\PortalUI.cpp" />
     <ClCompile Include="..\private\QuestHud.cpp" />
     <ClCompile Include="..\private\QuickSlot.cpp" />
+    <ClCompile Include="..\private\ReinforceHud.cpp" />
     <ClCompile Include="..\Private\Scene_JUN.cpp" />
     <ClCompile Include="..\private\Scene_Kim.cpp" />
     <ClCompile Include="..\Private\Scene_LEE.cpp" />
