--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="..\Public\EffectSoilDust.h" />
     <ClInclude Include="..\Public\EffectUrsaDust.h" />
     <ClInclude Include="..\Public\EffectUrsaShoulder.h" />
+    <ClInclude Include="..\Public\EffectVine.h" />
     <ClInclude Include="..\Public\Element_Bomb.h" />
     <ClInclude Include="..\Public\Bomb_Center.h" />
     <ClInclude Include="..\Public\Fire_explosion.h" />
@@ -401,6 +402,7 @@
     <ClCompile Include="..\Private\EffectSoilDust.cpp" />
     <ClCompile Include="..\Private\EffectUrsaDust.cpp" />
     <ClCompile Include="..\Private\EffectUrsaShoulder.cpp" />
+    <ClCompile Include="..\Private\EffectVine.cpp" />
     <ClCompile Include="..\Private\Element_Bomb.cpp" />
     <ClCompile Include="..\private\ElfNPC.cpp" />
     <ClCompile Include="..\private\El_Flogas.cpp" />
