--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -448,6 +448,9 @@
     <ClInclude Include="..\Public\EffectUrsaShoulder.h">
       <Filter>05.Effect\Ursa\Shoulder</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\EffectVine.h">
+      <Filter>05.Effect\Ursa\Vine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -881,6 +884,9 @@
     </ClCompile>
     <ClCompile Include="..\Private\EffectUrsaShoulder.cpp">
       <Filter>05.Effect\Ursa\Shoulder</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\EffectVine.cpp">
+      <Filter>05.Effect\Ursa\Vine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1332,6 +1338,9 @@
     </Filter>
     <Filter Include="05.Effect\Ursa\Shoulder">
       <UniqueIdentifier>{f22d41cb-ba1b-47b9-a666-902a8998e3c9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\Ursa\Vine">
+      <UniqueIdentifier>{c081963b-b0a9-495f-90ed-00410473da7b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
